--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -7,6 +7,11 @@
     <groupId>org.example</groupId>
     <artifactId>sample</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
+    <dependencies>
+    <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib</artifactId>
+        <version>3.3.0</version>
+    </dependency>
+    </dependencies>
 </project>
