--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -13,5 +13,10 @@
         <artifactId>cglib</artifactId>
         <version>3.3.0</version>
     </dependency>
+        <dependency>
+            <groupId>org.springframework.webflow</groupId>
+            <artifactId>spring-webflow</artifactId>
+            <version>2.4.5.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
